<resources>
    <string name="app_name">BookProject</string>
    <string name="register_book">Registro de un Libro</string>
    <string name="book_name">Nombre:</string>
    <string name="author">autor</string>
    <string name="nambe_of_the_book">nombre del libro</string>
    <string name="pages">Número de paginas</string>
    <string name="resume">Resumen</string>
    <string name="save">Guardar</string>
    <string name="info">Nombre: %s \nAutor: %s \nPáginas : %d \nResumen: %s \nGénero(s): %s \nCalificación: %d \nFecha de Publicación: %s</string>
    <string name="genre">Género</string>
    <string name="suspense">Suspenso</string>
    <string name="terror">Terror</string>
    <string name="infatile">Infantil</string>
    <string name="fiction">Ficción</string>
    <string name="score">Calificación</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="publication_date">Fecha de publicación</string>
    <string name="date_format">DD-MM-YYYY</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="does_not_have_account"><u>!No tienes cuenta Registrate¡</u></string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="register">Registrar</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="example_title">El Siconalista</string>
    <string name="example_author">Jhon Katzenbach</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_list">Libros</string>
    <string name="title_new">Agregar</string>
    <string name="title_update">Editar</string>
    <string name="title_delete">Borrar</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="search">Buscar</string>
    <string name="warning_title">Advertencia</string>
    <string name="delete_book_msg">¿Desea elimnar el linro %s del autor %s?</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="update">actualizar</string>

</resources>