<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ricaurte.bookproject.ui.bottom.ui.home.HomeFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.ricaurte.bookproject.ui.bottom.ui.dashboard.DashboardFragment"
        android:label="@string/title_new"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ricaurte.bookproject.ui.bottom.ui.notifications.NotificationsFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_notifications" />
</navigation>